# sbmfi

./: .gitignore  MDV_compres.ipynb  README.md  TODO  Untitled3.ipynb  anton_mcmc.ipynb  arxiv_polytope.ipynb  arxiv_prior.ipynb  env_pta.yml  new_priors.ipynb  pyproject.toml  sbmfi_demo.ipynb  setup.cfg
.github/workflows/: python-ci.yml
arxiv_polytope/: Untitled.ipynb  aitchison_flow.ipynb  continuous_flow.ipynb  discrete_flow.ipynb  flow_matching.ipynb  spline_flows.ipynb  target_distribution.ipynb  v_rep_flow_matching.ipynb
doc_notebooks/: introduction.ipynb
docker_13cflux2/: Dockerfile  README.md  combine_hdf.py  fml_parser.py  run_docker_on_file.ps1
docker_pta/: Dockerfile  README.md  run_pta.ps1  run_pta.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/notebooks/: install_and_overview.ipynb  introduction.ipynb  references.bib
src/sbmfi/compound/: adducts.py  formula.py  nist_mass.json
src/sbmfi/core/: build_model.py  coordinater.py  fml_parser.py  linalg.py  metabolite.py  model.py  observation.py  polytopia.py  reaction.py  simulator.py  simulfuncs.py  util.py
src/sbmfi/formula/: __init__.py  formula.py  nist_mass.json
src/sbmfi/inference/: arviz_monkey.py  arxiv_polytope_plotter.py  bayesian.py  complotting.py  continuous_flows.py  flow_trainer.py  manifolds.py  mdv_encoder.py  mdvae.py  mdvae_question_SO.py  mdvicreg.py  mle.py  normflow_ball.py  normflow_circular.py  normflows_patch.py  patch_flow_matsj.py  pol_flow_match.py  polytope_plotter.py  priors.py  ratio_prior.py  raytune.py  sampling.py  sbi_fix.py  simbafi.py  simformer.py  simulator.py  thermo_prior.py  tjelmeland.py  volume_bugging.py
src/sbmfi/lcmsanalysis/: physiology.py  plotting.py  util.py  wtool.py  zemzed.py
src/sbmfi/models/: LCMS_total_intensity.csv  build_models.py  maranas_atom_map_iAF1260.xls  mixed_substrate_experiment.py  small_models.py
(+25 files in other folders)
