[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbmfi"
version = "0.0.2"
description = "simulation based 13C metabolic flux analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tomek Diederen", email = "diederent@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = [
    "metabolism",
    "biology",
    "constraint-based",
    "linear programming",
    "metabolic flux analysis",
    "optimization",
    "elementary metabobolic units",
]
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "gurobipy",
    "cvxpy",
    "pandas",
    "cobra",
    "PolyRound",
    "torch>=2.0.0",
    "torchdiffeq",
    "flow-matching",
    "sbi",
    "arviz",
    "xarray",
    "tqdm",
    "matplotlib",
    "normflows",
    "pyknos",
    "torch-utils",
    "tables",
    "pycddlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/Patrickens/sbmfi"
Repository = "https://github.com/Patrickens/sbmfi"

[tool.hatch.build.targets.wheel]
packages = ["src/sbmfi"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sbmfi",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.shared-data]
"models/fml/*.fml" = "models/fml"
"models/sbml/*.xml" = "models/sbml" 